--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "WebF1-stick-figure-diamond-hunt",
     "description": "a simple example drawing stick figures on an HTML5 canvas, and hunting diamonds with a simple server",
     "version": "0.0.1",
-    "private": true,
+    "private": false,
     "dependencies": {
       "express": "4.x",
       "body-parser": "1.x.x"
